@@ -17,6 +17,6 @@
 		'author'=>'Benjamin Jay Young',
 		'version'=>'1.0',
 		'description'=>'Library for News, RSS, Atom and other news features',
-		'release'=>'2009-10-12'
+		'release'=>'2009-11-28'
 	);
 ?>
